fixed some issues in the hero section and updated dark mode prefrence function

--- a/style.css
+++ b/style.css
@@ -107,8 +107,9 @@ main .hero h1 {
   margin: 0;
   font-size: var(--heading);
   line-height: 110%;
-  animation: slide-in 1s ease 500ms forwards;
+  animation: slide-in .5s ease 500ms forwards;
   opacity: 0;
+  text-wrap: nowrap;
   
   & span{
     grid-column: span 7;
@@ -123,17 +124,20 @@ main .hero h1 {
 }
 
 main .hero p{
+  box-sizing: border-box;
   font-size: 1.375rem;
   line-height: 115%;
   margin-block: .5em;
   font-weight: 300;
   color: var(--accent-text-clr);
-  animation: slide-in 1s ease 750ms forwards;
-
-  & b{
-    color: var(--light-accent-text-clr);
-  }
+  animation: slide-in .5s ease 750ms forwards;
+  opacity: 0;
+  padding-right: 16px;
 }
+main .hero p b{
+  color: var(--light-accent-text-clr);
+}
+
 
 @keyframes slide-in {
   from {
@@ -303,7 +307,7 @@ footer p{
 
 
 
-@media (max-width: 380px) {
+@media (max-width: 450px) {
   main .hero h1{
     letter-spacing: revert;
   }
@@ -315,16 +319,18 @@ footer p{
     grid-column: span 7;
     justify-self: start;
   }
-}
-@media (max-width: 500px) {
   :root{
     --fs-h1: clamp(2.5rem, 7vw + 1rem, 5rem);
   }
   main .hero p{
-    font-size: clamp(1rem, .75vw + 1rem, 1.375rem);
-    padding-right: 16px;
-    box-sizing: border-box;
+    font-size: clamp(1rem, .9vw + 1rem, 1.375rem);    
   }
+}
+@media (min-width: 450px) and (max-width: 650px) {
+  main .hero p{
+    text-align: center;
+  }
+  
 }
 /* media quries */
 @media (min-width: 650px) {
@@ -341,9 +347,10 @@ footer p{
     justify-self: start;
   }
   main .hero p{
-    width: 70%;
+    width: 80%;
     margin: auto;
     text-align: center;
+    padding-right: 0px;
   }
   .selected-projects{
     grid-template-columns: repeat(4, 1fr);
